client/style.css
/**
 * =========================================
 * General purpose classes
 * =========================================
 */

 .hide-this {
   display:none;
 }

.center-children {
  text-align: center;
}

@media (min-width: 768px) {
  .bottom-half {
    margin-top: 60px;
  }
}
/**
 * Need to make body relative for scroll-spy to work
 * Need to add to body only after landing page
 */
.make-relative {
  position:relative;
}

body, .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6  {
  font-family: "Helvetica Neue", Arial, sans-serif;
  color: #191414;
  height:100%;
}

.box-shadow {
  -webkit-box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.75);
  -moz-box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.75);
  box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.75);
}

.light-box-shadow {
  -webkit-box-shadow: 0px -5px 10px 0px rgba(0,0,0,0.48);
  -moz-box-shadow: 0px -5px 10px 0px rgba(0,0,0,0.48);
  box-shadow: 0px -5px 10px 0px rgba(0,0,0,0.48);
}

.fa:hover {
  cursor: pointer;
}

/**
 * Class to prevent text from being selected
 */
.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Chrome/Safari/Opera */
     -khtml-user-select: none; /* Konqueror */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  not supported by any browser */
}

/**
 * =========================================
 * Nav Bar
 * =========================================
 */

.btn-outline-success {
  color: #1DB954;
}
.btn-outline-success:hover {
  background-color: #1DB954;
  border-color: #1DB954;
}

.has-success .form-control {
  border-color: #1DB954;
}

@media (max-width: 575px) {
  .submit-button {
    display: none;
  }
}

/**
 * Refactor clear button to use relative positioning later
 */
.search-clear {
    position: absolute;
    right: 115px;
    top: 0;
    bottom: 0;
    height: 20px;
    margin: auto;
    font-size: 20px;
    cursor: pointer;
    color: #ccc;
}

@media (max-width: 575px) {
  .search-clear {
    right: 30px;
  }
}

/**
 * =========================================
 * Artist Profile
 * =========================================
 */

.artist-profile-img {
  width: 200px;
  height: 200px;
  background-size: cover;
  background-position: center;
  border-radius: 50%;
  margin: 0 auto;
}

.artist-name {
  font-size: 4vw;
  color: white;
}

@media (max-width: 480px) {
  .artist-name {
    font-size: 22px;
  }
  .album-name {
    font-size: 18px;
  }
}

@media (max-width: 767px) {
  .artist-name {
    margin-top: 20px;
    margin-bottom: 20px;
  }
  .artist-profile-img {
    width: 150px;
    height: 150px;
  }
}

.artist-profile-placeholder {
  margin-top: 25px;
}

.cover-art-background {
  z-index: -2;
  top:0;
  background-repeat: no-repeat;
  background-position: 0%,0%,15%,30%,45%,60%,75%,90%,105%;
  height: 300px;
  width: 100%;
  position: absolute;
  -webkit-filter: blur(10px);
  filter: blur(10px);
}

/**
 * =========================================
 * Track list
 * =========================================
 */

.list-group {
  list-style: decimal inside;
}

.list-group-item {
  display: list-item;
}

.playing {
  background-color: #1DB954;
  border: 4px solid #1DB954;
  color:white;
}
.selected {
  border: 4px solid #1DB954;
}
.list-group-item:hover {
  cursor: pointer;
  border: 4px solid #1DB954;

}

.track-list {
  height: 600px;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;

}

@media (max-width: 767px) {
  .track-list {
    height: auto;
    min-height: 250px;
    margin-bottom: 20px;
  }

}
#other-artist{
  font-size: 14px;
  color: grey;
}
#other-artist:hover{
  border-bottom: 2px solid #1DB954;
  cursor: pointer;
  color: #1DB954;
}

.playing > #other-artist {
  color: #E4EDE4;
}

.playing > #other-artist:hover {
  color:white;
  border-bottom: 2px solid white;
}

/**
 * =========================================
 * Album Art
 * =========================================
 */

.album-list-outer {
  overflow-y: scroll;
  padding-bottom: 10px;
  margin-bottom: 40px;
  padding-top:10px;
  -webkit-overflow-scrolling: touch;

}

.album-list-container {
  height: 600px;
  padding-left: 0;
}

.album-image {
  width:30%;
  height:auto;
  margin-right: 4px;
  margin-bottom: 8px;
}

.album-image:hover {
  cursor: pointer;
}

.popular-album-image {
  background-color: white;
}

/**
 * CSS for sidescrolling albums when viewed on mobile
 */
@media (max-width: 767px) {
  .album-list-outer{
    height:auto;
  }
  .album-list-inner {
    display: table-row;
  }
  .album-list-cell {
    display: table-cell;
  }
  .album-image {
    width: 118px;
  }
}

.active-album {
  border: 4px solid #1DB954;
}

@media (min-width: 768px){
  .album-list-outer {
    margin-top: 38px;
  }
}

/**
 * =========================================
 * Related Artists
 * =========================================
 */

.artist-list-cell {
  cursor: pointer;
}

.related-artist-img {
 width: 118px;
 height: 118px;
 background-size: cover;
 background-position: center;
 margin: 0 auto;
}

/**
* CSS for sidescrolling albums when viewed on mobile
*/
.artist-list-outer{
 overflow-x: scroll;
 -webkit-overflow-scrolling: touch;
 height:auto;
 padding-top: 10px;
}
.artist-list-inner {
 display: table-row;
}
.artist-list-cell {
 display: table-cell;
}
.artist-list-cell > span {
  margin-right: 8px;
}
.artist-image {
 width: 118px;
}
.card {
  margin-bottom: 30px;
}
.card-text {
  font-size: 12px;
  text-align: center;
}
.card-block {
  padding: 10px 0;
}

.related-artist-header {
  margin: 30px 0;
}

@media (max-width: 480px){
  .related-artist-header {
    font-size: 18px;
  }
}

.related-artist-container {
  padding-top: 30px;
  background-color:#E4EDE4;
  width:100%;
}

/**
 * =========================================
 * Audio bar
 * =========================================
 */

.audio-bar{
  width:100%;
  background: #1DB954;
  position:fixed;
  padding: 7px;
  text-align: center;
  z-index:1;
  bottom:0px;
}
.audio-bar > span {
  color: white;
  font-size: 30px;
  bottom:0;
}

.play-pause {
  margin-right: 20px;
  margin-left: 20px;
  font-size: 70px;
}
.scroll-spy-position {
  bottom:-137px;
  position: absolute;
}
.audio-bar-text{
  color:white;
}
.artist-name-audio-bar {
  margin-bottom: 5px;
}
.audio-bar-info{
  width:100%;
  height:30px;
  overflow-x:scroll;
  -webkit-overflow-scrolling: touch;
}
.artist-name-audio-bar-text {
  color: #E4EDE4;
  font-size: 12px;
}
.audio-bar-fluid-width {
  margin: 0 auto;
}

/**
 * =========================================
 * Landing Page
 * =========================================
 */

.landing-page-title{
  margin-bottom: 36px;
}

.landing-page-search {
  display:inline;
  width: 50%;
}

.landing-page {
  z-index: 1;
  top: 8vw;
  position: relative;
}

/**
 * =========================================
 * Footer
 * =========================================
 */

.footer-bar {
  position: absolute;
  background: #1DB954;
  width: 100%;
  margin-top: 135px;
  padding: 5px;
  z-index: 2;
}
.footer-bar > span {
  color: white;
  font-size: 15px;
}
.footer-link {
  color:white;
  margin-left: 5px;
}
.footer-link:hover{
  color:black;
}
.footer-position {
  bottom: 0;
}

/**
 * =========================================
 * Animations
 * =========================================
 */

/**
 * Taken from hover.css
 * https://github.com/IanLunn/Hover
 /* Bob effect */

@-webkit-keyframes hvr-bob {
 0% {
   -webkit-transform: translateY(-5px);
   transform: translateY(-5px);
 }
 50% {
   -webkit-transform: translateY(-3px);
   transform: translateY(-3px);
 }
 100% {
   -webkit-transform: translateY(-5px);
   transform: translateY(-5px);
 }
}

@keyframes hvr-bob {
 0% {
   -webkit-transform: translateY(-5px);
   transform: translateY(-5px);
 }
 50% {
   -webkit-transform: translateY(-3px);
   transform: translateY(-3px);
 }
 100% {
   -webkit-transform: translateY(-5px);
   transform: translateY(-5px);
 }
}

@-webkit-keyframes hvr-bob-float {
 100% {
   -webkit-transform: translateY(-5px);
   transform: translateY(-5px);
 }
}

@keyframes hvr-bob-float {
 100% {
   -webkit-transform: translateY(-5px);
   transform: translateY(-5px);
 }
}

.hvr-bob:hover,
.hvr-bob:focus,
.hvr-bob:active {
 -webkit-animation-name: hvr-bob-float, hvr-bob;
 animation-name: hvr-bob-float, hvr-bob;
 -webkit-animation-duration: .3s, 1.5s;
 animation-duration: .3s, 1.5s;
 -webkit-animation-delay: 0s, .3s;
 animation-delay: 0s, .3s;
 -webkit-animation-timing-function: ease-out, ease-in-out;
 animation-timing-function: ease-out, ease-in-out;
 -webkit-animation-iteration-count: 1, infinite;
 animation-iteration-count: 1, infinite;
 -webkit-animation-fill-mode: forwards;
 animation-fill-mode: forwards;
 -webkit-animation-direction: normal, alternate;
 animation-direction: normal, alternate;
}

/* Grow */
.hvr-grow {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px transparent;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: transform;
  transition-property: transform;
}
.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
  -webkit-transform: scale(1.2);
  transform: scale(1.2);
}

